test/units/TypingSpec/valid/prog/untyped-lam-call-1.algst
double : Int -> Int
double x = (\i -> i * 2) x
