test/units/TypingSpec/invalid/types/case-var-binds-1.algst
\(b : Bool) -> case b of {
  True x -> (),
  False -> ()
}
